@@ -291,139 +291,139 @@
 </div>
 
 #search_display_keyword trim=ends
-	<div class="search_query">
-		<div class="status_code"><a href="{search_text}">{search_text}</a></div><span>{search_keyword_txt}</span>
-	</div>
-	
+<div class="search_query">
+	<div class="status_code"><a href="{search_text}">{search_text}</a></div><span>{search_keyword_txt}</span>
+</div>
+
 #search_display_aids trim=ends
-	<div class="search_query">
-		<div class="status_code"><a href="{search_text}">{search_text}</a></div><span>{search_external_txt}</span>
-	</div>
+<div class="search_query">
+	<div class="status_code"><a href="{search_text}">{search_text}</a></div><span>{search_external_txt}</span>
+</div>
 
 #search_display_country trim=ends
-	<div class="search_query">
-		<div class="recipient">{search_text}</div><span><img src="{flava}search_country.png" alt="Recipient icon" width="13" height="13"/>{search_recipient_txt}</span>
-	</div>
-	
+<div class="search_query">
+	<div class="recipient">{search_text}</div><span><img src="{flava}search_country.png" alt="Recipient icon" width="13" height="13"/>{search_recipient_txt}</span>
+</div>
+
 #search_display_sector trim=ends
-	<div class="search_query">
-		<div class="sect_cat">{search_text}</div><span><img src="{flava}search_category.png" alt="Sector icon" width="13" height="13"/>{search_sector_txt}</span>
-	</div>
+<div class="search_query">
+	<div class="sect_cat">{search_text}</div><span><img src="{flava}search_category.png" alt="Sector icon" width="13" height="13"/>{search_sector_txt}</span>
+</div>
 
 #search_display_status trim=ends
-	<div class="search_query">
-		<div class="status_code">{search_text}</div><span><img src="{flava}search_status.png" alt="Status icon" width="13" height="13"/>{search_status_txt}</span>
-	</div>
-	
+<div class="search_query">
+	<div class="status_code">{search_text}</div><span><img src="{flava}search_status.png" alt="Status icon" width="13" height="13"/>{search_status_txt}</span>
+</div>
+
 #search_display_funder trim=ends
-	<div class="search_query">
-		<div class="donor">{search_text}</div><span><img src="{flava}search_funder.png" alt="Funder icon" width="13" height="13"/>{search_donor_txt}</span>
-	</div>
-	
+<div class="search_query">
+	<div class="donor">{search_text}</div><span><img src="{flava}search_funder.png" alt="Funder icon" width="13" height="13"/>{search_donor_txt}</span>
+</div>
+
 #search_display_publisher trim=ends
-	<div class="search_query">
-		<div class="publisher">{search_text}</div><span><img src="{flava}search_publisher.png" alt="Publisher icon" width="13" height="13"/>{search_publisher_txt}</span>
-	</div>
-	
+<div class="search_query">
+	<div class="publisher">{search_text}</div><span><img src="{flava}search_publisher.png" alt="Publisher icon" width="13" height="13"/>{search_publisher_txt}</span>
+</div>
+
 #search_display_sector_group trim=ends
-	<div class="search_query">
-		<div class="sector">{search_text}</div><span><img src="{flava}search_sector.png" alt="Sector Group icon" width="13" height="13"/>{search_sectorgroup_txt}</span>
-	</div>
-	
+<div class="search_query">
+	<div class="sector">{search_text}</div><span><img src="{flava}search_sector.png" alt="Sector Group icon" width="13" height="13"/>{search_sectorgroup_txt}</span>
+</div>
+
 #search_display_year_min trim=ends
-	<div class="search_query">
-		<div class="year">{search_text}</div><span><img src="{flava}search_year.png" alt="Year icon" width="13" height="13"/>{search_year_txt} min</span>
-	</div>
-	
+<div class="search_query">
+	<div class="year">{search_text}</div><span><img src="{flava}search_year.png" alt="Year icon" width="13" height="13"/>{search_year_txt} min</span>
+</div>
+
 #search_display_year_max trim=ends
-	<div class="search_query">
-		<div class="year">{search_text}</div><span><img src="{flava}search_year.png" alt="Year icon" width="13" height="13"/>{search_year_txt} max</span>
-	</div>
-	
+<div class="search_query">
+	<div class="year">{search_text}</div><span><img src="{flava}search_year.png" alt="Year icon" width="13" height="13"/>{search_year_txt} max</span>
+</div>
+
 #search_display_search trim=ends
-	<div class="search_query">
-		<div class="text">{search_text}</div><span>{search_text_txt}</span>
-	</div>
-	
+<div class="search_query">
+	<div class="text">{search_text}</div><span>{search_text_txt}</span>
+</div>
+
 #search_display_collaboration_type trim=ends
-	<div class="search_query">
-		<div class="text">{search_text}</div><span><span class="filter_icon">&#10096;&#10097;</span>{search_collaboration_type_txt}</span>
-	</div>
-	
+<div class="search_query">
+	<div class="text">{search_text}</div><span><span class="filter_icon">&#10096;&#10097;</span>{search_collaboration_type_txt}</span>
+</div>
+
 #search_display_aid_type trim=ends
-	<div class="search_query">
-		<div class="text">{search_text}</div><span><span class="filter_icon">&#10096;&#10097;</span>{search_aid_type_txt}</span>
-	</div>
-	
+<div class="search_query">
+	<div class="text">{search_text}</div><span><span class="filter_icon">&#10096;&#10097;</span>{search_aid_type_txt}</span>
+</div>
+
 #search_display_finance_type trim=ends
-	<div class="search_query">
-		<div class="text">{search_text}</div><span><span class="filter_icon">&#10096;&#10097;</span>{search_finance_type_txt}</span>
-	</div>
-	
+<div class="search_query">
+	<div class="text">{search_text}</div><span><span class="filter_icon">&#10096;&#10097;</span>{search_finance_type_txt}</span>
+</div>
+
 #search_display_flow_type trim=ends
-	<div class="search_query">
-		<div class="text">{search_text}</div><span><span class="filter_icon">&#10096;&#10097;</span>{search_flow_type_txt}</span>
-	</div>
-	
+<div class="search_query">
+	<div class="text">{search_text}</div><span><span class="filter_icon">&#10096;&#10097;</span>{search_flow_type_txt}</span>
+</div>
+
 #search_display_tied_status trim=ends
-	<div class="search_query">
-		<div class="text">{search_text}</div><span><span class="filter_icon">&#10096;&#10097;</span>{search_tied_status_txt}</span>
-	</div>
-	
+<div class="search_query">
+	<div class="text">{search_text}</div><span><span class="filter_icon">&#10096;&#10097;</span>{search_tied_status_txt}</span>
+</div>
+
 #search_display_document_category trim=ends
-	<div class="search_query">
-		<div class="text">{search_text}</div><span><span class="filter_icon">&#10096;&#10097;</span>{search_document_category_txt}</span>
-	</div>
+<div class="search_query">
+	<div class="text">{search_text}</div><span><span class="filter_icon">&#10096;&#10097;</span>{search_document_category_txt}</span>
+</div>
 
 #search_display_humanitarian_activity trim=ends
-	<div class="search_query">
-		<div class="text">{search_text}</div><span><span class="filter_icon">&#10096;&#10097;</span>{search_humanitarian_activity_txt}</span>
-	</div>
-	
+<div class="search_query">
+	<div class="text">{search_text}</div><span><span class="filter_icon">&#10096;&#10097;</span>{search_humanitarian_activity_txt}</span>
+</div>
+
 #search_display_humanitarian_scope trim=ends
-	<div class="search_query">
-		<div class="text">{search_text}</div><span><span class="filter_icon">&#10096;&#10097;</span>{search_humanitarian_scope_txt}</span>
-	</div>
-	
+<div class="search_query">
+	<div class="text">{search_text}</div><span><span class="filter_icon">&#10096;&#10097;</span>{search_humanitarian_scope_txt}</span>
+</div>
+
 #search_display_participating trim=ends
-	<div class="search_query">
-		<div class="text">{search_text}</div><span><span class="filter_icon">&#10096;&#10097;</span>{search_participating_txt}</span>
-	</div>
+<div class="search_query">
+	<div class="text">{search_text}</div><span><span class="filter_icon">&#10096;&#10097;</span>{search_participating_txt}</span>
+</div>
 
 #search_display_policy trim=ends
-	<div class="search_query">
-		<div class="text">{search_text}</div><span><span class="filter_icon">&#10096;&#10097;</span>{search_policy_txt}</span>
-	</div>
+<div class="search_query">
+	<div class="text">{search_text}</div><span><span class="filter_icon">&#10096;&#10097;</span>{search_policy_txt}</span>
+</div>
 
 #search_display_related_activity trim=ends
-	<div class="search_query">
-		<div class="text">{search_text}</div><span><span class="filter_icon">&#10096;&#10097;</span>{search_related_activity_txt}</span>
-	</div>
+<div class="search_query">
+	<div class="text">{search_text}</div><span><span class="filter_icon">&#10096;&#10097;</span>{search_related_activity_txt}</span>
+</div>
 
 #search_display_result_type trim=ends
-	<div class="search_query">
-		<div class="text">{search_text}</div><span><span class="filter_icon">&#10096;&#10097;</span>{search_result_type_txt}</span>
-	</div>
-	
+<div class="search_query">
+	<div class="text">{search_text}</div><span><span class="filter_icon">&#10096;&#10097;</span>{search_result_type_txt}</span>
+</div>
+
 #search_display_tag_vocab trim=ends
-	<div class="search_query">
-		<div class="text">{search_text}</div><span><span class="filter_icon">&#10096;&#10097;</span>{search_tag_vocab_txt}</span>
-	</div>
+<div class="search_query">
+	<div class="text">{search_text}</div><span><span class="filter_icon">&#10096;&#10097;</span>{search_tag_vocab_txt}</span>
+</div>
 
 #search_display_commitment_min trim=ends
-	<div class="search_query">
-		<div class="text">{search_text}</div><span><span class="filter_icon">&#10096;&#10097;</span>{search_commitment_min_txt}</span>
-	</div>
+<div class="search_query">
+	<div class="text">{search_text}</div><span><span class="filter_icon">&#10096;&#10097;</span>{search_commitment_min_txt}</span>
+</div>
 
 #search_display_commitment_max trim=ends
-	<div class="search_query">
-		<div class="text">{search_text}</div><span><span class="filter_icon">&#10096;&#10097;</span>{search_commitment_max_txt}</span>
-	</div>
-	
+<div class="search_query">
+	<div class="text">{search_text}</div><span><span class="filter_icon">&#10096;&#10097;</span>{search_commitment_max_txt}</span>
+</div>
+
 #search_display_transaction_type trim=ends
-	<div class="search_query">
-		<div class="text">{search_text}</div><span><span class="filter_icon">&#10096;&#10097;</span>{search_transaction_type_txt}</span>
-	</div>
+<div class="search_query">
+	<div class="text">{search_text}</div><span><span class="filter_icon">&#10096;&#10097;</span>{search_transaction_type_txt}</span>
+</div>
 
 #main_searchmin
 <div class="default min">
