@@ -210,7 +210,7 @@
 
 #search_trend
 <div class="search_trend_wrap">	<!--	Trending search	-->
-  <span>Trending</span><a href="?keyword=covid-19#view=main">COVID-19</a><a href="?keyword=ebola#view=main">Ebola</a><a href="?keyword=hurricane dorian#view=main">Hurricane Dorian</a><a href="?keyword=locust#view=main">Locust</a><a href="?keyword=earthquake#view=main">Earthquake</a><a href="?keyword=tsunami#view=main">Tsunami</a><a href="?keyword=malaria#view=main">Malaria</a>
+  <span>Trending</span><a href="?keyword=covid#view=main">COVID</a><a href="?keyword=ebola#view=main">Ebola</a><a href="?keyword=hurricane dorian#view=main">Hurricane Dorian</a><a href="?keyword=locust#view=main">Locust</a><a href="?keyword=earthquake#view=main">Earthquake</a><a href="?keyword=tsunami#view=main">Tsunami</a><a href="?keyword=malaria#view=main">Malaria</a>
 </div>
 	
 <!-- SEARCH2: Toggle search intro section, hidden at load / GLOSSARY	-->
