@@ -1,5 +1,11 @@
 Development Portal (2020-04-12 shi)
 ==============================
+Display codes for transaction attributes
+Update css
+
+
+Development Portal (2020-04-12 shi)
+==============================
 Update glossary for search
 Add trending search buttons
 Update css
